--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p></p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
-                <img src="portrait.webp" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
+                <img src="images/portrait.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
                     width="500" height="333">
             </div>
 
@@ -143,31 +143,31 @@
     <div class="w3-content w3-container w3-padding-64" id="portfolio">
 
         <div class="w3-row m6 w3-center w3-padding-large">
-            <img src="https://images.pexels.com/photos/2849145/pexels-photo-2849145.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Me"
+            <img src="images/car.png" alt="car circuit"
                 width="500" height="333">
             <p class="w3-center">Battery powered car programmed with C using a PIC microcontroller. Uses motors and sensors to follow a black line and complete a track</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
-            <img src="https://images.pexels.com/photos/2849145/pexels-photo-2849145.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Me"
+            <img src="images/calculator.png" alt="calculator circuit"
                 width="500" height="333">
             <p class="w3-center">Breadboard circuit that uses IC's calculate the sum/difference of 2 bit binary inputs and return it using LED's</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
-            <img src="https://images.pexels.com/photos/2849145/pexels-photo-2849145.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Me"
+            <img src="images/elevator.png" alt="elevator circuit"
                 width="500" height="333">
             <p class="w3-center">Breadboard circuit that simulates an elevator using a microcontroller</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
-            <img src="https://images.pexels.com/photos/2849145/pexels-photo-2849145.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Me"
+            <img src="images/ringer.png" alt="ringer"
                 width="500" height="333">
             <p class="w3-center">Breadboard circuit that displays a spinning LED configuration and plays sound when the button is pressed</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
-            <img src="https://images.pexels.com/photos/2849145/pexels-photo-2849145.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Me"
+            <img src="images/wordle.png" alt="wordle game"
                 width="500" height="333">
             <p class="w3-center">A spin on the wordle game in a turn based player vs computer style where the computer uses algorithmic problem-solving to make an educated guess. Coded in Java.</p>
         </div>
