--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <img src="images/portrait.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
-                    width="500" height="333">
+                    width="400" height="233">
             </div>
 
             <!-- Hide this text on small devices -->
@@ -145,13 +145,13 @@
         <div class="w3-row m6 w3-center w3-padding-large">
             <img src="images/car.png" alt="car circuit"
                 width="500" height="333">
-            <p class="w3-center">Battery powered car programmed with C using a PIC microcontroller. Uses motors and sensors to follow a black line and complete a track</p>
+            <p class="w3-center">Robot car programmed with C using a PIC microcontroller. Uses motors and sensors to follow a black line and complete a track</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
             <img src="images/calculator.png" alt="calculator circuit"
                 width="500" height="333">
-            <p class="w3-center">Breadboard circuit that uses IC's calculate the sum/difference of 2 bit binary inputs and return it using LED's</p>
+            <p class="w3-center">Breadboard circuit that uses IC's to calculate the sum of 2 bit binary inputs and return it using LED's</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
