--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 cursor: pointer;
             }
 
-            /* Turn off parallax scrolling for tablets and phones */
+            /* Turn off parallax scrolling for tablets and phones 
             @media only screen and (max-device-width: 1600px) {
 
                 .bgimg-1,
@@ -71,6 +71,7 @@
                     min-height: 400px;
                 }
             }
+            */
         </style>
     </head>
 <body>
