--- a/index.html
+++ b/index.html
@@ -210,12 +210,19 @@
     </div>
 
     <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-        <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+        <a href="#home" class="w3-button w3-light-grey">
+            <i class="fa fa-arrow-up w3-margin-right"></i>To the top
+        </a>
         <div class="w3-xlarge w3-section">
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
-            <i class="fa fa-github w3-hover-opacity"></i>
-    <!-- Footer end. -->
+            <a href="https://www.linkedin.com/in/noor-azam-" target="_blank" class="w3-hover-opacity">
+                <i class="fa fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/noorazamm" target="_blank" class="w3-hover-opacity">
+                <i class="fa fa-github"></i>
+            </a>
+        </div>
     </footer>
+
 
     <script>
         // Modal Image Gallery
