--- a/index.html
+++ b/index.html
@@ -144,27 +144,33 @@
     <div class="w3-content w3-container w3-padding-64" id="portfolio">
 
         <div class="w3-row m6 w3-center w3-padding-large">
+            <img src="images/snake.png" alt="snake game"
+                width="500" height="333">
+            <p class="w3-center">This C++ snake game applies OOP concepts by using modular design to control player interactions, dynamic behaviors, and game mechanics. It handles random events like spawning food and adapts gameplay based on player actions and special conditions.</p>
+        </div>
+
+        <div class="w3-row m6 w3-center w3-padding-large">
             <img src="images/car.png" alt="car circuit"
                 width="500" height="333">
-            <p class="w3-center">Robot car programmed with C using a PIC microcontroller. Uses motors and sensors to follow a black line and complete a track</p>
+            <p class="w3-center">Robot car programmed with C using a PIC microcontroller. Uses motors and sensors to follow a black line and complete a track.</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
             <img src="images/calculator.png" alt="calculator circuit"
                 width="500" height="333">
-            <p class="w3-center">Breadboard circuit that uses IC's to calculate the sum of 2 bit binary inputs and return it using LED's</p>
+            <p class="w3-center">Breadboard circuit that uses IC's to calculate the sum of 2 bit binary inputs and return it using LED's.</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
             <img src="images/elevator.png" alt="elevator circuit"
                 width="500" height="333">
-            <p class="w3-center">Breadboard circuit that simulates an elevator using a microcontroller</p>
+            <p class="w3-center">Breadboard circuit that simulates an elevator using a microcontroller.</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
             <img src="images/ringer.png" alt="ringer"
                 width="500" height="333">
-            <p class="w3-center">Breadboard circuit that displays a spinning LED configuration and plays sound when the button is pressed</p>
+            <p class="w3-center">Breadboard circuit that displays a spinning LED configuration and plays sound increasing in pitch when the button is pressed and held.</p>
         </div>
 
         <div class="w3-row m6 w3-center w3-padding-large">
